# python-GOIT-tasks-web

./: README.md
HomeWork-06/: Readme.txt  create_and_populate_db.py  query_2.sql  query_5.sql  query_6.sql  requirements.txt
HomeWork_02/task_1/: pyproject.toml
HomeWork_02/task_1/poetry-project/: README.md  pyproject.toml
HomeWork_02/task_2/: Dockerfile  README.txt  addressbook.pkl  docker-compose.yml  pyproject.toml
HomeWork_03/: task_1.py  task_2.py
HomeWork_04/: Dockerfile  README.txt  docker-compose.yml  index.html  main.py  main2.py  message.html
HomeWork_04/storage/: data.json
HomeWork_05/: main.py  main_2.py  main_3.py  main_4.py  requirements.txt
HomeWork_06/: Readme.txt  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_3.sql  query_4.sql  query_7.sql  query_8.sql  query_9.sql  university.db
HomeWork_07/: README.txt  models.py  my_select.py  seed.py
HomeWork_08/: README.txt  connect.py  load_data.py  main.py  producer.py
HomeWork_09/: README.txt  connect.py  consumer.py  models.py  requirements.txt  search_quotes.py
HomeWork_11/: crud.py  main.py  models.py  schemas.py
HomeWork_12/: auth.py  main.py  models.py  schemas.py  users.py
HomeWork_13_1/: Dockerfile  README.txt  auth.py  config.py  crud.py  database.py  docker-compose.yml  email.py  mail_service.py  main.py  models.py  rate_limiter.py  requirements.txt  schemas.py  users.py
HomeWork_14/: Dockerfile  README.txt  auth.py  config.py  crud.py  database.py  docker-compose.yml  mail_service.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  users.py
(+81 files in other folders)
