[project]
name = "poetry-project"
version = "0.1.0"
description = "creating test's poetry project"
authors = [
    {name = "Dmytro Maslakov",email = "dmitry.maslakov@gmail.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
