[tool.poetry]
name = "addressbook-cli"
version = "0.1.0"
description = "CLI-based personal assistant address book"
authors = ["Dmytro Maslakov <dmitry.maslakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
addressbook = "addressbook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

